Drag drop components and toast alignment fix

--- a/src/app/shared/components/toast/toast.component.scss
+++ b/src/app/shared/components/toast/toast.component.scss
@@ -1,8 +1,15 @@
 .snackbar-container{
     display: flex;
-    color: #d8d8d8;;
+    color: #d8d8d8;
+    align-items: center;
+    .icon{
+        span{
+            display: block;
+        }        
+    }
     .message{
         padding: 0 10px;
+        padding-right: 66px;
     }
     .btn{
         position: absolute;
